--- a/influcid-MN/index.html
+++ b/influcid-MN/index.html
@@ -26,7 +26,7 @@
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
               <ul id="menu">
-                <li><a class="navmenu" href="#block-1" >ашиг тус</a></li>
+                <li><a class="navmenu" href="#block-1" >Ашиг тус</a></li>
                 <li><a class="navmenu" href="#block-2" >Эмийн үйлдэл</a></li>
                 <li><a class="navmenu" href="#block-3" >Найрлага</a></li>
                 <li><a class="navmenu" href="#block-4" >Хэрэглэх арга</a></li>
