--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			<a href="Tansilotren/index.html">Tansilotren</a>
 			<a href="influcid-Georgia/index.html">influcid-Georgia</a>
 			<a href="influcid-Uzbekistan/index.html">influcid-Uzbekistan</a>
+			<a href="Tansilotren-Ukraine/index.html">Tansilotren-Ukraine</a>
 			
 		</section>
 	</main>
@@ -164,6 +165,9 @@
 	}
 	a:nth-child(30)::before {
 		background: url("./influcid-Uzbekistan/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(31)::before {
+		background: url("./Tansilotren-Ukraine/bg.png")no-repeat center / cover;
 	}
 </style>
 
