--- a/Tansilotren-Ukraine/index-ru.html
+++ b/Tansilotren-Ukraine/index-ru.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <link rel="shortcut icon" href="./images/icon.png" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <script src="js/script.js"></script>
+    <script src="js/script-ru.js"></script>
 </head>
 <body>
 
