--- a/influcid-Georgia/index.html
+++ b/influcid-Georgia/index.html
@@ -356,7 +356,7 @@
       <div class="block-6__container-text"><p>ეპიდემიოლოგიური სეზონი დაიწყო და უკვე დროა მოვემზადოთ. ყურადღება მიაქციეთ, რომ გრიპი და მრვი (მწვავე რესპირაციული ვირუსული ინფექცია) განსხვავდება - გრიპის გამომწვევია გრიპის ვირუსის სხვადასხვა შტამი (ერთი სახეობის ვირუსის სხვადასხვა ვარიანტი, რომლებიც განსხვავდებიან მთელი რიგი მახასიათებლებით), ხოლო მრვი-ს გამომწვევი შესაძლებელია იყოს 200-მდე სხვადასხვა ვირუსი, რომლებიც ხშირად ერთმანეთთან გენეტიკურად  არ არიან დაკავშირებული  და მიეკუთვნებიან დაავადების გამომწვევ სხვადასხვა ჯგუფს. </p>
         <p>რას უნდა ველოდოთ ახალ სეზონზე 2019-2020-ში?</p>
       </div>
-      <button class="accordion">Подробнее</button>
+      <button class="accordion">დეტალურად</button>
       <div class="panel">
         <p>ჯანმრთელობის საერთაშორისო ორგანიზაციის მონაცემების მიხედვით, ახალ ეპიდემიოლოგიურ სეზონზე ჩრდილოეთ ნახევარსფეროში მოსალოდნელია გრიპის შემდეგი შტამების ცირკულაცია:</p>
         <ul>
@@ -401,7 +401,7 @@
         გაციებისგან თქვენი პატარას დაცვა, სამწუხაროდ, მთელი სიცოცხლის განმავლობაში  შეუძლებელია. მით უმეტეს, თუ თქვენი პირმშო მთელი დღე იმყოფება. თანატოლების გარემოცვაში. ბაღში ან სკოლაში, საკმარისია ერთი ბავშვი ავად გახდეს, ინფექცია ძალიან სწრაფად ვრცელდება. პატარას ავადმყოფობა ხშირად დედის ბიულეტენზე გასვლას გულისხმობს.  აქ ისმის კითხვა: „ როგორ ვუმკურნალოთ გაციებას? რომელია საუკეთესო საშუალება გაციებასთან ბრძოლაში? შესაძლებელია თუა არა სწრაფად განკურნება? რა უნდა გავაკეთოთ , რომ პატარა რაც შეიძლება იშვიათად გაცივდეს და მაქსიმალურად უმტკივნეულოდ ჩაიაროს დაავადებამ?“
       </p>
       </div>
-      <button class="accordion">Подробнее</button>
+      <button class="accordion">დეტალურად</button>
       <div class="panel">
         <p>ყველაზე ხშირად ცივდება 6 თვიდან 12 წლამდე ასაკის ბავშვები, რადგან სწორედ ამ დროს ფორმირდება იმუნური სისტემა.
           გრიპისა და გაციების ეფექტური მკურნალობა მოითხოვს დაუყოვნებელ რეაგირებას პირველივე ნიშნებისას:</p>
@@ -461,8 +461,8 @@
       <!--            </p>-->
 <!--      <p>DEŢINĂTORUL CERTIFICATULUI DE ÎNREGISTRARE Deutsche Homöopathie-Union DHU-Arzneimittel GmbH & Co KG, Ottostrasse 24, 76227 Karlsruhe Germania Tel.: + 49 (721) 40 93 236</p>-->
       <div class="logos-container">
-        <a class="disclamer-tra__logo" href=""><p><b>Производитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
-        <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Импортер:</b><br> Alpen Pharma<br>(Швейцария)</p></a>
+        <a class="disclamer-tra__logo" href=""><p><b>მწარმოებელი:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
+        <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>მომწოდებელი:</b><br> Alpen Pharma<br>(Швейцария)</p></a>
       </div>
     </div>
 
