--- a/influcid-MN/index-en.html
+++ b/influcid-MN/index-en.html
@@ -21,7 +21,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Where to buy</a>
+          <!-- <a class="where-to-buy where-to-buy__desktop" href="#block-5">Where to buy</a> -->
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -40,7 +40,7 @@
               <a class="navmenu" href="#block-2" >Effect</a>
               <a class="navmenu" href="#block-3" >Composition</a>
               <a class="navmenu" href="#block-4" >How to use</a>
-              <a class="where-to-buy" href="#block-5" >Where to buy</a>
+              <!-- <a class="where-to-buy" href="#block-5" >Where to buy</a> -->
               <a href="index.html" >mn</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
@@ -415,8 +415,8 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
             </div>
 
             <div class="block-7">
-              <h2>WHERE TO BUY</h2>
-              <div class="block-7__img"></div>
+              <!-- <h2>WHERE TO BUY</h2> -->
+              <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Evidential base</h3>
                 <ol>
@@ -443,7 +443,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>SELF-TREATMENT CAN BE DANGEROUS TO YOUR HEALTH</p>
+            <p>Эм хэрэглэхийн өмнө эмчээс зөвлөлгөө авна уу</p>
           </div>
 
 
