--- a/influcid-MN/index.html
+++ b/influcid-MN/index.html
@@ -21,7 +21,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Хаанаас худалдаж авах</a>
+          <!-- <a class="where-to-buy where-to-buy__desktop" href="#block-5">Хаанаас худалдаж авах</a> -->
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -40,7 +40,7 @@
               <a class="navmenu" href="#block-2" >Эмийн үйлдэл</a>
               <a class="navmenu" href="#block-3" >Найрлага</a>
               <a class="navmenu" href="#block-4" >Хэрэглэх арга</a>
-              <a class="where-to-buy" href="#block-5" >Хаанаас худалдаж авах</a>
+              <!-- <a class="where-to-buy" href="#block-5" >Хаанаас худалдаж авах</a> -->
               <a href="index-en.html" >en</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
@@ -350,8 +350,8 @@
             </div>
 
             <div class="block-7">
-              <h2>ХААНААС ХУДАЛДАЖ АВАХ ВЭ</h2>
-              <div class="block-7__img"></div>
+              <!-- <h2>ХААНААС ХУДАЛДАЖ АВАХ ВЭ</h2> -->
+              <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Нотлох баримтууд</h3>
                 <ol>
