--- a/influcid-Uzbekistan/index-usb.html
+++ b/influcid-Uzbekistan/index-usb.html
@@ -33,7 +33,7 @@
                 <li><a class="navmenu" href="#block-3" >Composition</a></li>
                 <li><a class="navmenu" href="#block-4" >How to use</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-                <li><a href="index-usb.html" >usb</a></li>
+                <li><a href="index.html" >узб</a></li>
               </ul>
             </div>
           </div>
@@ -43,7 +43,7 @@
               <a class="navmenu" href="#block-3" >Composition</a>
               <a class="navmenu" href="#block-4" >How to use</a>
               <a class="where-to-buy" href="#block-5" >Where to buy</a>
-              <a href="index-usb.html" >usb</a>
+              <a href="index.html" >узб</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">Instruction</p></a
@@ -56,66 +56,66 @@
         <div class="main-img-container"></div>
         <a name="block-1"></a>
         <p>
-          <b>Иситмангиз борми?</b> Бу сизнинг танловингиз. <b>Инфлюцид</b>
+          <b>Istimangiz bormi?</b> Bu sizning tanlovingiz. <b>Influсid.</b>
         </p>
 
         <div class="header-block-2">
           <a class="block-2__plate">
-            <p>Германияда ишлаб чикарилган</p>
+            <p>Germaniyada ishlab chiqarilgan</p>
           </a>
           <a class="block-2__plate">
-            <p>Катталар ва болалар учун</p>
+            <p>O`smir va yosh bollar uchun</p>
           </a>
           <a class="block-2__plate">
-            <p>Табиий таркиб</p>
+            <p>Tabiy insho</p>
           </a>
           <a href="https://www.clinicaltrialsregister.eu/ctr-search/search?query=Influcid" class="block-2__plate">
-            <p>Текширилган ташкилот</p>
+            <p>Tekshirilgan tashkilot</p>
           </a>
         </div>
       </header>
       <div class="block-1">
-        <h2>MАНФААТЛАР</h2>
+        <h2>Manfaatlar</h2>
         <div class="block-1__text">
           <p>
-            Иситма аломатларини йўқотиш.¹
+            Istima simptomlarni yo`qotish.¹
           </p>
           <p>
-            Симптоматик дориларга эхтиёжни камайиши.(иситма тушиш, бурин оқиши, йўтал).²
+            Simtomatik dorilarga muxtoj kamayishi.(Istima tushish,burin oqishi,yo`tal).²
           </p>
           <p>
-            Teз даволанишни таъминлаш.¹
+            Tez davolanishni ta`minglash.¹
           </p>
           <p>
-            Кaсaлланган одамлар билан мулоқотдан сўнг касалликни олдини олиш.
+            Zararlangan odamlar bilan muloqotdan so`ng kasalikni oldini olish.
           </p>
-          <p>Утиб кетган касалликдан сўнг кучни тиклаш.¹</p>
+          <p>O`tib ketkan kasallikdan so`ng kuchni tiklash.¹</p>
         </div>
       </div>
       <a name="block-2"></a>
       <div class="block-2">
-        <h2>ИНФЛЮЦИД ҚАНДАЙ ИШЛАЙДИ</h2>
+        <h2>Influсid qay tarzda ishlaydi</h2>
         <div class="block-2__container">
           <div class="block-2__image">
             <b>
-              У танани табиий химоясини<br>кучайтиради ва тез<br>тикланишига ёрдам беради.¹
+              U tanani mukammalashtiradi<br>va tez tiklanishini<br>oldini oladi.¹
             </b>
           </div>
           <div class="block-2__text">
-            <p>Иситмани туширади</p>
-            <p>Taнaдaги оғриқ хисларини йўқотади</p>
-            <p>Бош оғриқни қoлдиради</p>
-            <p>Бурин оқишини камайтиради</p>
-            <p>Toмоқ қичишиш ва томоқ оғришларини йўқотади</p>
-            <p>Касалликни ривожланишини енгил йўқотади</p>
+            <p>Istimani tushuradi</p>
+            <p>Tanadagi og`riq hislarni oldini oladi</p>
+            <p>Bosh og`riqni qoldiradi</p>
+            <p>Burin oqishini kamaytiradi</p>
+            <p>Tomoq qichishish va tomoq og`riqlarni yo`qotadi</p>
+            <p>Kasallikni rivojlanishini yengil yo`qotadi</p>
           </div>
         </div>
       </div>
       <a name="block-3"></a>
       <div class="block-3">
         <h2>
-          ВИРУСЛАРГА ҚАРШИ КУРАШДА<br />
-          6та TAБИИЙ КОМПОНЕНТЛАР
+          VIRUSLARGA QARSHI<br />
+          6 TABIY TARKIBIY QISIMLAR
         </h2>
         <div class="prod-mobile"></div>
         <div class="block-3__container">
@@ -146,7 +146,7 @@
       </div>
       <a name="block-4"></a>
       <div class="block-4">
-        <h2>ДОРИ  ҚAНДАЙ ҚЎЛЛАНИЛАДИ</h2>
+        <h2>DORI QAY TARZDA QOLLANILADI</h2>
         <!-- <div class="change-box">
           <div>
             <p class=" p-btn1 active-btn">pills</p>
@@ -157,18 +157,18 @@
         </div> -->
       </div>
       <div class="block-5 block-5-1 block-5-active">
-        <h3>KAСАЛЛИК ЖАРАЁНИДА</h3>
+        <h3>KASALIK JARAYONIDA</h3>
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>1 ёшдан 12 ёшгача бўлган болалар:</b> 1 таблеткадан хар 2 соатда(1 кунда 8та таблеткадан ортик бўлмасин) то тўлиқ тузалгунча
+              <b>Yosh bollar 1 yoshdan 12 yoshgacha:</b> 1 tabletka har 2 soatda to to`liq tarqalmaguncha(1 kunda 8ta tabletkadan ortiq bo`lmasin)to tuzalguha
               
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
-                <b>БИРИНЧИ КУН</b>
-                <b class="subtext">ХАР 2 СОАТДА</b>
-                <p>1 таблетка</p>
+                <b>Birinchi kunda</b>
+                <b class="subtext">har 2 soatda</b>
+                <p>1 tabletka</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -176,10 +176,10 @@
               </div>
               <div class="subcontainer-particle-1">
                 <b>
-                  Давомий<br />қабул
+                  Davomiy<br />qabul
                 </b>
-                <b class="subtext">тузалгунчa</b>
-                <p>1 таблетка, 1 кунда 3 махал</p>
+                <b class="subtext">tuzalguncha</b>
+                <p>1 tabletka, 3 mahal, 1 kunda.</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -190,13 +190,13 @@
             <p>
               <b>
           <div class="container__subcontainer">
-            <p>12 ёшдан ошган болалар ва катталар:</b> 1 таблеткадан хар соатда(1 кунда 12та таблеткадан ортик бўлмасин) то тўлиқ тузалгунча
+            <p>Yosh bollar 12 yoshdan katta va o`smirlar:</b> Qabul  to`liq tarqalishigacha har soatda(12 tabletkadan ko`p emas) tuzalguncha
         </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
-                <b>БИРИНЧИ КУН</b>
+                <b>BIRINCHI KUNSOAT</b>
                 <b class="subtext">Хар Соат</b>
-                <p>1 таблетка</p>
+                <p>1 tabletka</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -204,10 +204,10 @@
               </div>
               <div class="subcontainer-particle-1">
                 <b>
-                  Давомий<br />қабул
+                   Davolanish<br />tuzalgunga qadar
                 </b>
                 <b class="subtext">тузалгунчa</b>
-                <p>1-2 таблетка, 1 кунда 3 махал</p>
+                <p>1-2 tabletka,3 mahal,1 kunda</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -217,19 +217,19 @@
           </div>
         </div>
         <p class="block-5__container-btext">
-          Даволаниш муддати:7-10 кун тўлиқ тузалгунча
+          Davolanish mudati.7-10 kun tuzalgunga qadar
         </p>
-        <h3>OРВИ oлдини олиш</h3>
+        <h3>ORVI oldini olish</h3>
 
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b> 1 ёшдан 12 ёшгача бўлган болалар:</b>1 таблеткадан 1 кунда 3 махал
+              <b> Yosh bollar 1 yoshdan 12 yoshgacha:</b>1 tabletka 3 mahal 1 kunda
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
                 <b>БИР КУНДА</b>
-                <p>3 таблеткадан кўп эмас</p>
+                <p>3 tabletkadan ko`p emas</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -240,12 +240,12 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>12 ёшдан ошган болалар ва катталар:</b> 1-2 таблеткадан 1 кунда 3 махал
+              <b>Bollar 12 yoshdan katta va o`smirlar:</b> 1-2 tabletka,3 mahal,1 kunda
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
                 <b>БИР КУНДА</b>
-                <p>1 кунда 6 таблеткадан кўп эмас</p>
+                <p>1 kunda, 6ta tabletkadan ko`p emas</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -256,15 +256,15 @@
         </div>
         <div class="bottom-text">
           <p>
-            ОРВИ ва Грипп белгиларининг дастлабки кўринишларида ёки инфекцияланган одамлар билан алоқа қилгандан сўнг препаратни қўллаш - касаллик ривожланишининг олдини олишга ёрдам беради.
+            Dorini qo`llanishida birinchi ARVIga tasiri va gripp simptomi yoki zararlangan odam bilan muloqotdan so`ng kasallikni oldini olishga va kasallik rivojlanishini oldini olishga yordam beradi.
           </p>
           <p>
-            Грипп ёки ОРВИ билан оғриган одамлар билан алоқа қилгандан сўнг Инфлюцид 1 ҳафта давомида ичилади.
+            Gripp yoki ARVI bilan kasalangan odamlar bilan muloqot  tohtatkandan so`ng Infludsid 1 hafta ichiladi 
           </p>
         </div>
         <div class="bottom-text__b">
           <b>
-            Таблеткани аста-секин оғизда тўлиқ эригунча ушланг. 3 ёшгача бўлган болалар учун таблеткани оз миқдорда суюқликда эритиб ёки майдаланган ҳолда, тил остида бериш тавсия этилади. Дорини овқатдан ярим соат олдин ёки ярим соатдан кейин истеъмол қилиш керак.
+            Og`zingizda sekin eridigan tabletkalar.Yosh bollar uchun 3 yoshdan kattalarga tabletkani suyug`lik bilan eritib berishni tafsiya etiladi yoki uni mayda bo`lakchalarga bo`lib berish kerak. Dorini yarim soat oldin yoki kegin ovqatdan so`ng istemol qilish kerak.
           </b>
         </div>
         <a class="buy-btn pill-btn"><p>WHERE TO BUY?</p></a>
@@ -273,11 +273,11 @@
 
 
         <div class="block-6">
-            <h2>ФОЙДАЛИ МАЪЛУМОТ</h2>
+            <h2>FOYDALI MALUMOT</h2>
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Flue of the season 2020</p></div>
-              <div class="block-6__container-text"><p>Эпидемиологик мавсум бошланди ва унга тайёргарлик кўриш вақти келди. Эътибор беринг, Грипп ва ОРВИ (ўткир респиратор вирусли инфекция) ўртасидаги фарқ шундаки, грипп қўзғатувчилари грипп вирусининг турли штаммларидир (бир турдаги вируснинг вариантлари бир қатор хусусиятларга эга )  ОРВИни қўзғатишга 200 дан ортиқ бўлган хар хил турдаги вируслар сабабчи бўлиб, генетик жихатдан боғлиқ эмас ва турли хил касаллик гурухларига тегишлидир.</p>
-                <p>2019- 2020 йилги янги мавсумдан нима кутишимиз мумкин ?</p>
+              <div class="block-6__container-text"><p>Epidem mavsum ham bo`shlandi va hozir shunga tayyorlanishga  ayni payti. Iltimos shuni inobatga oling, gripp va ORVI farqini yodda tuting.(Otkir respiratorli virusli infeksiya) Bir qator hususiyatlarda farq qiluvchi bir turdagi virusning variantlari.ORVI turlari 200dan ortiq har hil viruslarni tashkil etadi. Va ular ko`pincha genetic jihatdan bog`liq emas va kasaliklarning turi guruhlariga tegishlik.</p>
+                <p>2019-2020 yilgi yangi mavsumda nimani kutishimiz mumkin?</p>
 
               </div>
               <button class="accordion">detailed</button>
@@ -322,7 +322,7 @@
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Treating a child’s cold</p></div>
               <div class="block-6__container-text"><p>
-                Афсуски, болангизни бутун ҳаёт мобайнида касалликлардан  бутунлай ҳимоя қилиш мумкин эмас. Айниқса, фарзандингиз ҳар куни тенгдошлари билан учрашиб турса. Болалар боғчасида ёки мактабда битта боланинг касалланиши етарли ва инфекция тезда тарқалади. Боланинг касаллиги кўпинча онасининг касалланишига олиб келади.  Шу ерда савол туғилади: "шамоллашни бир зумда  қандай даволаш мумкин? Энг яхши дори нима ?"
+                Afsuski, farzandingizni bunday sovuqlardan (kasallik) butun hayotingiz davomida himoya qilishingiz ilojisiz. Ayniqsa ular o`z tengdoshlari orasida bo`lsa.Bolalar bog`chasida yoki maktabda bitta bola kasal  bo`lib qolsa,infektsiya teza tarqaladi.Bolaning kasalligini kopincha onasining kasal bo`lishiga olib keladi.Shu yerda bir savol tug`iladi”Qanday qilib tez istimani tushirish mumkin?Qaysi dori eng zo`r?”
               </p>
               </div>
               <button class="accordion">detailed</button>
@@ -356,7 +356,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
             </div>
 
             <div class="block-7">
-              <h2>Қ AEРДАН СОТИБ ОЛАМИЗ</h2>
+              <h2>QAYERDAN OLAMIZ?</h2>
               <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
