--- a/influcid-MN/index.html
+++ b/influcid-MN/index.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="desctop-navigation">
-            <a class="navmenu" href="#block-1" >ашиг тус</a>
+            <a class="navmenu" href="#block-1" >Ашиг тус</a>
               <a class="navmenu" href="#block-2" >Эмийн үйлдэл</a>
               <a class="navmenu" href="#block-3" >Найрлага</a>
               <a class="navmenu" href="#block-4" >Хэрэглэх арга</a>
