--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 			<a href="influcid-Georgia/index.html">influcid-Georgia</a>
 			<a href="influcid-Uzbekistan/index.html">influcid-Uzbekistan</a>
 			<a href="Tansilotren-Ukraine/index.html">Tansilotren-Ukraine</a>
+			<a href="Tansilotren-Georgia/index.html">Tansilotren-Georgia</a>
+
 			
 		</section>
 	</main>
@@ -168,6 +170,9 @@
 	}
 	a:nth-child(31)::before {
 		background: url("./Tansilotren-Ukraine/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(32)::before {
+		background: url("./Tansilotren-Georgia/bg.png")no-repeat center / cover;
 	}
 </style>
 
