--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			<a href="influcid-Uzbekistan/index.html">influcid-Uzbekistan</a>
 			<a href="Tansilotren-Ukraine/index.html">Tansilotren-Ukraine</a>
 			<a href="Tansilotren-Georgia/index.html">Tansilotren-Georgia</a>
+			<a href="Tansilotren-KZ/index.html">Tansilotren-KZ</a>
 
 			
 		</section>
@@ -173,6 +174,9 @@
 	}
 	a:nth-child(32)::before {
 		background: url("./Tansilotren-Georgia/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(33)::before {
+		background: url("./Tansilotren-KZ/bg.png")no-repeat center / cover;
 	}
 </style>
 
