--- a/Tansilotren-Ukraine/index-ru.html
+++ b/Tansilotren-Ukraine/index-ru.html
@@ -219,27 +219,24 @@
                 <div class="popup__body">
                     <div class="popup__message">
 
-                        <p><b>Острый период:</b></p>
+                        <p><b>Дети старше 12 лет и взрослые</b></p>
 
-                        <p>по 1 табл. каждый час
-                            (до 12 раз в день) 
-                            первые 1-2 дня до улучшения.
-                        </p>
+                        <p><b>Острый период:</b>по 1 табл. каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
 
-                        <p>Поддерживающая терапия:</p>
+                        <p><b>Поддерживающая терапия:</b>
 
-                        <p><b>по 1-2 табл. 3 раза в день до полного выздоровления.</b></p>
+                        по 1-2 табл. 3 раза в день до полного выздоровления.</p>
 
                         <p><sup>*</sup>Если после 7 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
 
-                        <p><b>При увеличении небных миндалин:</b></p>
+                        <p><b>При увеличении небных миндалин:</b>
 
-                        <p>по 1 табл. 3 раза в день 6-8 недель.</p>
+                        по 1 табл. 3 раза в день 6-8 недель.</p>
 
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b></p>
+                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b>
 
-                        <p>по 1 табл. 3 раза в день,<br>
-                            6-8 недель<br>
+                        по 1 табл. 3 раза в день,
+                            6-8 недель
                             несколько курсов в год.</p>
 
                         <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
