--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -166,7 +166,7 @@
                     <div class="popup__message">
                         <p><b>Діти від 2 до 6 років </b></p>
 
-                        <p><b>При гострих станах або для підтримувальної терапії:</b> по 1 табл. 3 рази на добу.</p>
+                        <p><b>При гострих станах та при подальшому лікуванні:</b> по 1 табл. 3 рази на добу.</p>
 
                         <p><b>При збільшенні піднебінних мигдаликів:</b> 
                             по 1 табл. 3 рази на добу,
@@ -195,9 +195,9 @@
                         <p><b>Діти від 6 до 12 років</b></p>
 
                         <p><b>Гострий період:</b> по 1 табл. кожні 2 години
-                            (До 6 разів на добу) перші 1-2 дні до покращення стану.</p>
+                            (до 6 разів на добу) перші 1-2 дні до покращення стану.</p>
 
-                        <p><b>Підтримувальна терапія:</b> по 1 табл. 3 рази на добу до повного одужання.
+                        <p><b>При подальшому лікуванні:</b> по 1 табл. 3 рази на добу до повного одужання.
                             *Якщо після 8 днів лікування не спостерігається повного одужання або з'явилися нові симптоми захворювання, слід обов'язково звернутися до лікаря.</p>
 
                         <p><b>При збільшенні піднебінних мигдаликів:</b> по 1 табл. 3 рази на добу,
@@ -223,27 +223,25 @@
                 <div class="popup__body">
                     <div class="popup__message">
 
-                        <p><b>Гострий період:</b></p>
+                    	<p><b>Діти старше 12 років та дорослі</b></p>
 
-                        <p>по 1 табл. кожну годину
-                            (До 12 разів на добу) перші 1-2 дні до покращення стану.
-                        </p>
+                        <p><b>Гострий період:</b>по 1 табл. кожну годину (до 12 разів на добу) перші 1-2 дні до покращення стану.</p>
 
-                        <p>Підтримувальна терапія:</p>
+                        <p><b>При подальшому лікуванні:</b>
 
-                        <p><b>по 1-2 табл. 3 на добу до повного одужання.</b></p>
+                     	по 1-2 табл. 3 на добу до повного одужання.</p>
 
                         <p><sup>*</sup>Якщо після 7 днів лікування не спостерігається повного одужання або з'явилися нові симптоми захворювання, слід обов'язково звернутися до лікаря.</p>
 
-                        <p><b>При збільшенні піднебінних мигдаликів:</b></p>
+                        <p><b>При збільшенні піднебінних мигдаликів:</b>
 
-                        <p>по 1 табл. 3 рази на добу
+                        по 1 табл. 3 рази на добу
                             6-8 тижнів.</p>
 
-                        <p><b>При схильності до ангін для профілактики повторних епізодів:</b></p>
+                        <p><b>При схильності до ангін для профілактики повторних епізодів:</b>
 
-                        <p>по 1 табл. 3 рази на добу,<br>
-                            6-8 тижнів<br>
+                        по 1 табл. 3 рази на добу,
+                            6-8 тижнів
                             кілька курсів на рік.</p>
 
                         <p>Таблетки приймати за 30 хвилин до або через 30 хвилин після їди, повільно розсмоктуючи в ротовій порожнині.</p>
@@ -262,7 +260,7 @@
         <div class="plate">
             <div class="plate-img"></div>
             <h3>Діти від 2 до 6 років</h3>
-            <p><b>При гострих станах або для підтримувальної терапії:</b><br>по 1 табл. 3 рази на добу.</p>
+            <p><b>При гострих станах та при подальшому лікуванні:</b><br>по 1 табл. 3 рази на добу.</p>
             <!--            <div class="popup popup1">Детальнее</div>-->
             <button class="popup-btn popup1" data-action="open1">Детальніше</button>
         </div>
@@ -279,14 +277,14 @@
             <div class="plate-img"></div>
             <h3>Діти від 6 до 12 років</h3>
             <p><b>Гострий період:</b><br> по 1 табл. кожні 2 години
-                (До 6 разів на добу) перші 1-2 дні до покращення стану.</p>
+                (до 6 разів на добу) перші 1-2 дні до покращення стану.</p>
             <button class="popup-btn popup2" data-action="open2">Детальніше</button>
         </div>
         <div class="plate">
             <div class="plate-img"></div>
-            <h3>Дорослі і діти старше 12</h3>
+            <h3>Діти старше 12 років та дорослі</h3>
             <p><b>Гострий період:</b><br>по 1 табл. кожну годину
-                (До 12 разів на добу) перші 1-2 дні до покращення стану.</p>
+                (до 12 разів на добу) перші 1-2 дні до покращення стану.</p>
             <button class="popup-btn popup3" data-action="open3">Детальніше</button>
         </div>
     </div>
@@ -319,10 +317,10 @@
             <div class="panel">
                 <p>ТОНЗИЛІТ - це гостре або хронічне запалення піднебінних мигдаликів (утворень на бічних поверхнях в глибині глотки, схожих на мигдальні горіхи). Мигдалики пронизані особливими щілинами - лакунами. Лакуни - пастки для мікробів і вірусів, а також своєрідний «полігон», де імунна система вчиться боротьбі з цими мікробами і вірусами. Саме мигдалики першими зустрічають хвороботворні мікроорганізми із зовнішнього середовища та забезпечують захист нашого організму.
                     ГОСТРИЙ ТОНЗИЛІТ або АНГІНА - це гостре інфекційне захворювання з переважним ураженням мигдаликів. При цьому страждають як самі мигдалики, так і весь організм в цілому. У більшості випадків гострий тонзиліт викликають віруси, але є особливо небезпечні бактерії: стрептококи або стафілококи. Проявляється тонзиліт сильним болем в горлі, запаленням і збільшенням в розмірі піднебінних мигдаликів, високою температурою. Можлива поява гнійних нальотів. Після перенесеної ангіни знижується імунітет і організму стає складніше чинити опір інфекціям.
-                    Якщо протягом року у людини два або більше повторних епізоди гострого тонзиліту, то мова вже йде про рекурентний тонзиліт (з латинської Recurrens - «поворотний, повторний»). Таким чином, рекурентний ТОНЗИЛІТ - це загострення наявного хронічного тонзиліту.</p>
+                    Якщо протягом року у людини два або більше повторних епізоди гострого тонзиліту, то мова вже йде про рекурентний тонзиліт (з латинської Recurrens - «поворотний, повторний»). Таким чином, рекурентний ТОНЗИЛІТ - це всім відомий хронічний тонзиліт.</p>
                 <p>Наявність хронічного тонзиліту означає, що мигдалики не справляються зі своєю захисною функцією і не можуть повноцінно забезпечити функціонування місцевого та загального імунітету.</p>
 
-                <p><b>Також НАЙЧАСТІШІ АНГІНИ можуть спричинити розвиток серйозних ускладнень:</b></p>
+                <p><b>Також ЧАСТІ АНГІНИ можуть спричинити розвиток серйозних ускладнень:</b></p>
 
                 <p>паратонзілярний абсцес<br>
                     гостра ревматична лихоманка<br>
@@ -332,7 +330,7 @@
 
                 <p><b>Тому дуже важливо не тільки позбутися від збудників захворювань, а й відновити роботу мигдаликів.</b></p>
                     
-                <p>Для лікування рекурентного тонзиліту широко застосовуються різні групи препаратів, спрямовані як на усунення інфекції (антибіотики, антисептики), так і на відбудову захисної функції організму (імуномодулятори, вітаміни, натуральні комплексні препарати).</p>
+                <p>Для лікування рекурентного тонзиліту широко застосовуються різні групи препаратів, спрямовані як на усунення інфекції (антибіотики, антисептики), так і на відновлення захисної функції організму (імуномодулятори, вітаміни, натуральні комплексні препарати).</p>
 
                 <p>Більше 80 років для успішного лікування ангіни і рекурентного тонзиліту застосовується німецький натуральний комплексний препарат Тонзилотрен (DHU, Німеччина).
                     Тонзилотрен – це комбінація з п'яти активних натуральних компонентів, які знімають запалення і стимулюють власні захисні механізми організму при вірусних і бактеріальних інфекціях глотки на різних стадіях запалення, сприяють зменшенню збільшених мигдаликів.</p>
@@ -358,7 +356,8 @@
                     При лікуванні дітей віком до 3 років таблетку рекомендується розчиняти в невеликій кількості води (наприклад, у чайній ложці).
                     Можна приймати у будь-якому місці і в будь-який час. Але пам'ятайте, що інтервал між прийомом препарату Тонзилотрен і їжею або напоями повинен бути не менше 30 хвилин.
                     Тонзилотрен при ангіні слід приймати відразу після того, як Ви відчули перші симптоми.
-                    Тонзилотрен допомагає відновити структуру і захисну функцію мигдаликів.</p>
+                    Тонзилотрен знімає запалення та допомагає відновити мигдалики після перенесеної ангіни структуру і захисну функцію мигдаликів.
+</p>
             </div>
         </div>
 
@@ -374,7 +373,8 @@
                     При лікуванні дітей віком до 3 років таблетку рекомендується розчиняти в невеликій кількості води (наприклад, у чайній ложці).
                     Можна приймати у будь-якому місці і в будь-який час. Але пам'ятайте, що інтервал між прийомом препарату Тонзилотрен і їжею або напоями повинен бути не менше 30 хвилин.
                     Тонзилотрен при ангіні слід приймати відразу після того, як Ви відчули перші симптоми.
-                    Тонзилотрен допомагає відновити структуру і захисну функцію мигдаликів.</p>
+                    Тонзилотрен знімає запалення та допомагає відновити мигдалики після перенесеної ангіни структуру і захисну функцію мигдаликів.
+</p>
             </div>
         </div>
 
@@ -410,8 +410,8 @@
 <!--        plate3-->
         <div class="block-5__plate">
             <div class="block-5__text">
-                <h4>Мигдалики видалити не можна залишити. Де поставити кому?</h4>
-                <p>Сучасні тенденції в лікуванні хронічного тонзиліту у дітей ґрунтуються на максимально <b>дбайливому ставленні до миндаликів</b> як імунокомпетентного органу (органу, що відповідає за імунітет), видалення яких виправдано тільки у випадках доведеної функціональної непридатності і гіпертрофії лімфоглоткового кільця Вальдеєра - Пирогова.</p>
+                <h4>Мигдалики видалити не можна залишити.<br>Де поставити кому?</h4>
+                <p>Сучасні тенденції в лікуванні хронічного тонзиліту у дітей ґрунтуються на максимально <b>дбайливому ставленні до миндаликів</b> як імунокомпетентного органу (органу, що відповідає за імунітет), видалення яких виправдано тільки у випадках доведеної функціональної непридатності і та значному збільшенні мигдаликів.</p>
             </div>
             <div class="block-5__img"></div>
         </div>
@@ -420,8 +420,8 @@
             <div class="mobile mob3">
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
-                    <h4>Мигдалики видалити не можна залишити. Де поставити кому?</h4>
-                    <p>Сучасні тенденції в лікуванні хронічного тонзиліту у дітей ґрунтуються на максимально <b>дбайливому ставленні до миндаликів</b> як імунокомпетентного органу (органу, що відповідає за імунітет), видалення яких виправдано тільки у випадках доведеної функціональної непридатності і гіпертрофії лімфоглоткового кільця Вальдеєра - Пирогова.</p>
+                    <h4>Мигдалики видалити не можна залишити.<br>Де поставити кому?</h4>
+                    <p>Сучасні тенденції в лікуванні хронічного тонзиліту у дітей ґрунтуються на максимально <b>дбайливому ставленні до миндаликів</b> як імунокомпетентного органу (органу, що відповідає за імунітет), видалення яких виправдано тільки у випадках доведеної функціональної непридатності і та значному збільшенні мигдаликів.</p>
                 </div>
             </div>
             <button class="accordion popup-btn block-5__popup">Детальніше</button>
