--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -356,7 +356,7 @@
                     При лікуванні дітей віком до 3 років таблетку рекомендується розчиняти в невеликій кількості води (наприклад, у чайній ложці).
                     Можна приймати у будь-якому місці і в будь-який час. Але пам'ятайте, що інтервал між прийомом препарату Тонзилотрен і їжею або напоями повинен бути не менше 30 хвилин.
                     Тонзилотрен при ангіні слід приймати відразу після того, як Ви відчули перші симптоми.
-                    Тонзилотрен знімає запалення та допомагає відновити мигдалики після перенесеної ангіни структуру і захисну функцію мигдаликів.
+                    Тонзилотрен знімає запалення та допомагає відновити мигдалики після перенесеної ангіни.
 </p>
             </div>
         </div>
@@ -373,7 +373,7 @@
                     При лікуванні дітей віком до 3 років таблетку рекомендується розчиняти в невеликій кількості води (наприклад, у чайній ложці).
                     Можна приймати у будь-якому місці і в будь-який час. Але пам'ятайте, що інтервал між прийомом препарату Тонзилотрен і їжею або напоями повинен бути не менше 30 хвилин.
                     Тонзилотрен при ангіні слід приймати відразу після того, як Ви відчули перші симптоми.
-                    Тонзилотрен знімає запалення та допомагає відновити мигдалики після перенесеної ангіни структуру і захисну функцію мигдаликів.
+                    Тонзилотрен знімає запалення та допомагає відновити мигдалики після перенесеної ангіни.
 </p>
             </div>
         </div>
