--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -166,7 +166,7 @@
                     <div class="popup__message">
                         <p><b>Діти від 2 до 6 років </b></p>
 
-                        <p><b>При гострих станах та при подальшому лікуванні:</b> по 1 табл. 3 рази на добу.</p>
+                        <p><b>При гострих станах або при подальшому лікуванні:</b> по 1 табл. 3 рази на добу.</p>
 
                         <p><b>При збільшенні піднебінних мигдаликів:</b> 
                             по 1 табл. 3 рази на добу,
