--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -195,7 +195,7 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>12 yaşlı və böyük uşaqlar:</b> hər saat, tam əriyənə qədər sormalıdır (sutkada 12 həbdən çox olmayaraq), yaxşılaşma baş verənədək. 
+              <b>12 yaşlı uşaqlar və böyüklər:</b> hər saat, tam əriyənə qədər sormalıdır (sutkada 12 həbdən çox olmayaraq), yaxşılaşma baş verənədək. 
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -245,7 +245,7 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>12 yaşlı və böyük uşaqlar:</b> sutkada 3 dəfə 1-2 həb sormalı
+              <b>12 yaşlı uşaqlar və böyüklər:</b> sutkada 3 dəfə 1-2 həb sormalı
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
